--- a/index.org
+++ b/index.org
@@ -11,7 +11,7 @@ Links from [[http://reddit.com/r/emacs/new][reddit.com/r/emacs]], [[http://reddi
 [[~/code/emacs-calendar/README.org][~/code/emacs-calendar/README.org]]
 
 * STARTED [#A] Do another Emacs News review   
-  SCHEDULED: <2021-03-02 Tue .+1w>
+  SCHEDULED: <2021-09-13 Mon .+1w>
   :PROPERTIES:
   :Effort:   1:30
   :QUANTIFIED: Emacs
@@ -19,13 +19,15 @@ Links from [[http://reddit.com/r/emacs/new][reddit.com/r/emacs]], [[http://reddi
   :POSTID:   28441
   :POST_DATE: 20151026T17:18:00+0000
   :Published: No
-  :LAST_REPEAT: [2021-02-23 Tue 00:18]
+  :LAST_REPEAT: [2021-09-06 Mon 01:24]
   :ID:       o2b:ef27b244-48a5-4227-9a01-30228a81ebee
   :CATEGORY: emacs-news
   :POST_TAGS: emacs, emacs-news
   :END:
   :LOGBOOK:
-  CLOCK: [2021-09-06 Mon 00:26]
+  - State "DONE"       from "STARTED"    [2021-09-06 Mon 01:24]
+  - State "DONE"       from "STARTED"    [2021-09-06 Mon 01:24]
+  CLOCK: [2021-09-06 Mon 00:26]--[2021-09-06 Mon 01:23] =>  0:57
   CLOCK: [2021-07-26 Mon 22:44]
   CLOCK: [2021-07-19 Mon 00:25]--[2021-07-22 Thu 00:21] => 71:56
   CLOCK: [2021-06-28 Mon 00:04]--[2021-06-28 Mon 22:42] => 22:38
